# habits_prpject

./: .env  README.md  manage.py  pyproject.toml  requirements.txt
dict_project/: asgi.py  settings.py  urls.py  wsgi.py
habits/: apps.py  models.py  permissions.py  serializers.py  tasks.py  urls.py  views.py
habits/migrations/: 0001_initial.py
habits/test/: test_models.py  test_views.py
report/: index.html
users/: models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py
